--- a/styles/about_styles.css
+++ b/styles/about_styles.css
@@ -320,7 +320,7 @@ section
 }
 .header.scrolled
 {
-	background: rgba(54, 19, 84, 0.85);
+	background: rgba(255,255,255,0.85);
 }
 
 /*********************************
