--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -1298,7 +1298,7 @@ section
 .cta
 {
 	
-	background: linear-gradient(to right,#ff4040 , #0d0d5d);
+	
 }
 .cta_background
 {
@@ -1779,6 +1779,8 @@ section
 	
 	padding-left: 48px;
 	padding-right: 48px;
+	padding-top: 48px;
+	padding-bottom: 48px;
 	background: linear-gradient(to top right, #ff4040, #0d0d5d);
 }
 .contact_form
@@ -2226,3 +2228,76 @@ section
     display: none;
   }
 }
+
+
+/*********************************
+9. Add
+*********************************/
+
+.add
+{
+	width: 100%;
+}
+.add_background
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
+}
+.add_container
+{
+	padding-top: 52px;
+	padding-bottom: 64px;
+}
+.add_content
+{
+	padding-left: 151px;
+}
+.add_title
+{
+	font-weight: 600;
+	text-transform: uppercase;
+	color: #FFFFFF;
+	padding-left: 2px;
+}
+.add_subtitle
+{
+	font-size: 16px;
+	font-weight: 400;
+	color: #FFFFFF;
+	padding-left: 7px;
+}
+.add_subtitle span
+{
+	font-size: 18px;
+	font-weight: 700;
+}
+.add_button
+{
+	margin-top: 30px;
+}
+
+
+
+
+.button_bcg 
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 200%;
+	height: 100%;
+	background: linear-gradient(to right, #0d0d5d, #ff4040, #0d0d5d);
+	z-index: -1;
+	-webkit-transition: all 400ms ease;
+	-moz-transition: all 400ms ease;
+	-ms-transition: all 400ms ease;
+	-o-transition: all 400ms ease;
+	transition: all 400ms ease;
+}
+
